# Coursework

EC311 - Intro to Logic Design/: README.md
EC311 - Intro to Logic Design/Lab 1/: README.txt  fullALU.v  halfAdder.v  halfAdder_testbench.v  rippleAdder.v  rippleAdder_testbench.v
EC311 - Intro to Logic Design/Lab 2/: carrySelectAdder_testbench.v
EC311 - Intro to Logic Design/Lab 3/: README.txt  ascii_rom.v  decoder_test.v  textGeneration.v  vga_sync.v
EC311 - Intro to Logic Design/Lab 4/: RCA_verification.v  README.txt  hamming_memory.v  moore_FSM_tb.v
EC327 - Intro to Software Engineering/EC327/: Lab2Quiz  inclassquiztwo
EC330 - Applied Algorithms for Engineers/: README.md
EC330 - Applied Algorithms for Engineers/Homework 1/: Problem4.cpp  Problem5.cpp
EC330 - Applied Algorithms for Engineers/Homework 2/: MaxProduct.h
EC330 - Applied Algorithms for Engineers/Homework 3/: LinkedList.h
EC330 - Applied Algorithms for Engineers/Homework 4/: main.cpp
EC330 - Applied Algorithms for Engineers/Homework 5/: merkle_tree.h
EC330 - Applied Algorithms for Engineers/Homework 7/: Huffman.cpp
EC330 - Applied Algorithms for Engineers/Homework 8/: Graph.cpp  main.cpp
EC413 - Computer Organization/lab1/: written_responses.txt
EC413 - Computer Organization/lab2a/: lab2a_modified.asm
EC530 - Software Engineering Principles/: README.md
ME416 - Intro to Robotics/HW5/rastic_ws/install/me416_lab/share/me416_lab/: controller_line_launch.py  package.dsv  package.sh  package.xml  package.zsh
ec311/Lab 1/: fullAdder_testbench.v
temp_Coursework/: README.md
(+445 files in other folders)
